--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ html {
   max-width: 100%;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   .main-content {
     top: 2.5625rem;
   }
@@ -75,12 +75,31 @@ header .icon {
   padding-left: .75rem;
 }
 
-header .mobile {
+header .tablet,
+.mobile {
   display: none;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
   header .desktop {
+    display: none;
+  }
+
+  header .tablet {
+    display: block;
+  }
+
+  header .tablet .button {
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  header .desktop,
+  .tablet {
     display: none;
   }
 
@@ -170,7 +189,7 @@ header .mobile {
   padding: 1.25rem 7.25rem;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
   #sign-up-section {
     align-items: center;
     justify-content: center;
@@ -202,9 +221,27 @@ header .mobile {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   #sign-up-section {
+    align-items: center;
+    justify-content: center;
     height: 20rem;
+  }
+
+  #sign-up-cta {
+    position: static;
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    border: none;
+  }
+
+  #sign-up-cta .content {
+    margin-top: 0;
+  }
+
+  #sign-up-cta .email {
+    display: none;
   }
 
   #sign-up-cta h1 {
@@ -256,11 +293,15 @@ header .mobile {
   color: #4a4a4a;
 }
 
-@media only screen and (max-width: 890px) {
-  .feature h2 {
-    font-size: 1.125rem;
-    line-height: 1.3;
-    font-weight: normal;
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+  .feature .image-container {
+    width: 100%;
+  }
+
+  .feature .content {
+    padding: 2.5rem 0 0 0;
+    text-align: left;
   }
 
   .feature h3 {
@@ -269,7 +310,7 @@ header .mobile {
   }
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   #features-section {
     flex-flow: column;
     padding: 0;
@@ -282,6 +323,12 @@ header .mobile {
 
   .feature .content {
     padding: 1.25rem 0 1.875rem 0;
+  }
+
+  .feature h2 {
+    font-size: 1.125rem;
+    line-height: 1.3;
+    font-weight: normal;
   }
 }
 
@@ -316,7 +363,7 @@ header .mobile {
   padding: 0 1%;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   #filters-section {
     padding: 1.5rem 0 0 0;
   }
@@ -369,7 +416,15 @@ header .mobile {
   height: 1.875rem;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  #quotes-section .content {
+    padding: 5rem 2rem;
+    display: flex;
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   #quotes-section .content {
     padding: 1.875rem .625rem;
   }
@@ -403,7 +458,7 @@ footer .copyright {
   flex-grow: 1;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   footer .content {
     font-size: .625rem;
   }
